# ccc

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
default/.claude/: settings.local.json
src/: api.rs  config.rs  main.rs  tui.rs  ui.rs  utils.rs
src/commands/: check.rs  doctor.rs  global.rs  init.rs  key.rs  mod.rs  show.rs  update.rs  version.rs
src/tui/: app.rs  component.rs  event.rs  input.rs  mod.rs  render.rs  state.rs  theme.rs
src/tui/components/: confirm_modal.rs  footer.rs  header.rs  input_modal.rs  key_table.rs  mod.rs  status_dashboard.rs  toast.rs
