[package]
name = "ccc"
version = "0.1.20"
edition = "2024"
description = "Claude Code Config CLI"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored_json = "5"
console = "0.15"
crossterm = "0.28"
dialoguer = "0.11"
indicatif = "0.17"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
zip = "2"
